--- a/Modulo2_Actividad5.ipynb
+++ b/Modulo2_Actividad5.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>Total por Cliente</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Tomás Ramírez</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Laura Rojas</td>\n",
+       "      <td>98500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Juan Perez</td>\n",
+       "      <td>133500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pedro Rodríguez</td>\n",
+       "      <td>286200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Camila Torres</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Mateo Diaz</td>\n",
+       "      <td>35000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Carla González</td>\n",
+       "      <td>14000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Diego Martínez</td>\n",
+       "      <td>3600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Matias Castro</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Valentina Herrera</td>\n",
+       "      <td>121900.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Ana Lopez</td>\n",
+       "      <td>14000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Luisa Fernández</td>\n",
+       "      <td>108500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Martin Gómez</td>\n",
+       "      <td>32600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Renata Flores</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Javier Torres</td>\n",
+       "      <td>10000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Maria Sánchez</td>\n",
+       "      <td>8000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Marta Ramírez</td>\n",
+       "      <td>13000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Daniel Silva</td>\n",
+       "      <td>10500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Sofía Pérez</td>\n",
+       "      <td>33800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Nicolás Ruiz</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               nombre  Total por Cliente\n",
+       "0       Tomás Ramírez                0.0\n",
+       "1         Laura Rojas            98500.0\n",
+       "2          Juan Perez           133500.0\n",
+       "3     Pedro Rodríguez           286200.0\n",
+       "4       Camila Torres                0.0\n",
+       "5          Mateo Diaz            35000.0\n",
+       "6      Carla González            14000.0\n",
+       "7      Diego Martínez             3600.0\n",
+       "8       Matias Castro                0.0\n",
+       "9   Valentina Herrera           121900.0\n",
+       "10          Ana Lopez            14000.0\n",
+       "11    Luisa Fernández           108500.0\n",
+       "12       Martin Gómez            32600.0\n",
+       "13      Renata Flores                0.0\n",
+       "14      Javier Torres            10000.0\n",
+       "15      Maria Sánchez             8000.0\n",
+       "16      Marta Ramírez            13000.0\n",
+       "17       Daniel Silva            10500.0\n",
+       "18        Sofía Pérez            33800.0\n",
+       "19       Nicolás Ruiz                0.0"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_detalle_con_precios = pd.merge(df_detalle, df_productos, left_on='codigo_producto', right_on='codigo', how='left')\n",
     "df_detalle_con_precios.drop('codigo_producto', axis=1, inplace=True)\n",
@@ -67,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -94,197 +253,235 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>anio</th>\n",
+       "      <th>2023</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>trimestre</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>producto</th>\n",
        "      <th>comuna</th>\n",
-       "      <th>cantidad</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">Aceite de cocina</th>\n",
        "      <th>Santiago</th>\n",
-       "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sin Informacion</th>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">Agua mineral</th>\n",
        "      <th>Iquique</th>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>La Serena</th>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">Arroz</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Santiago</th>\n",
-       "      <th>3</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Arroz</th>\n",
+       "      <th>Santiago</th>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Sin Informacion</th>\n",
-       "      <th>6</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>Sin Informacion</th>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">Azúcar</th>\n",
        "      <th>Iquique</th>\n",
-       "      <th>7</th>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Puerto Montt</th>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Santiago</th>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">Café</th>\n",
        "      <th>Antofagasta</th>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sin Informacion</th>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Valparaíso</th>\n",
-       "      <th>8</th>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Carne de pollo</th>\n",
        "      <th>Sin Informacion</th>\n",
-       "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">Fideos</th>\n",
        "      <th>Antofagasta</th>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Concepción</th>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sin Informacion</th>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Frutas frescas</th>\n",
        "      <th>Sin Informacion</th>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Galletas</th>\n",
        "      <th>Antofagasta</th>\n",
-       "      <th>7</th>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">Harina</th>\n",
        "      <th>Antofagasta</th>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Concepción</th>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Iquique</th>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Santiago</th>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sin Informacion</th>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">Helado</th>\n",
        "      <th>Antofagasta</th>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Temuco</th>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Viña del Mar</th>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">Leche</th>\n",
        "      <th>Puerto Montt</th>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Santiago</th>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mantequilla</th>\n",
        "      <th>Valparaíso</th>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">Pescado</th>\n",
        "      <th>Antofagasta</th>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Rancagua</th>\n",
-       "      <th>9</th>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Valparaíso</th>\n",
-       "      <th>20</th>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Queso</th>\n",
        "      <th>Viña del Mar</th>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">Verduras</th>\n",
        "      <th>Iquique</th>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Rancagua</th>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Valparaíso</th>\n",
-       "      <th>10</th>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Yogur</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Sin Informacion</th>\n",
-       "      <th>7</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>Yogur</th>\n",
+       "      <th>Sin Informacion</th>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: [(Aceite de cocina, Santiago, 6), (Aceite de cocina, Sin Informacion, 5), (Agua mineral, Iquique, 3), (Agua mineral, La Serena, 3), (Arroz, Santiago, 3), (Arroz, Santiago, 6), (Arroz, Sin Informacion, 6), (Arroz, Sin Informacion, 9), (Azúcar, Iquique, 7), (Azúcar, Puerto Montt, 3), (Azúcar, Santiago, 2), (Café, Antofagasta, 4), (Café, Sin Informacion, 1), (Café, Valparaíso, 8), (Carne de pollo, Sin Informacion, 6), (Fideos, Antofagasta, 5), (Fideos, Concepción, 5), (Fideos, Sin Informacion, 2), (Frutas frescas, Sin Informacion, 2), (Galletas, Antofagasta, 7), (Harina, Antofagasta, 1), (Harina, Concepción, 1), (Harina, Iquique, 3), (Harina, Santiago, 2), (Harina, Sin Informacion, 2), (Helado, Antofagasta, 4), (Helado, Temuco, 4), (Helado, Viña del Mar, 2), (Leche, Puerto Montt, 1), (Leche, Santiago, 1), (Mantequilla, Valparaíso, 4), (Pescado, Antofagasta, 4), (Pescado, Rancagua, 9), (Pescado, Valparaíso, 20), (Queso, Viña del Mar, 5), (Verduras, Iquique, 1), (Verduras, Rancagua, 5), (Verduras, Valparaíso, 10), (Yogur, Sin Informacion, 7), (Yogur, Sin Informacion, 8)]"
+       "anio                             2023\n",
+       "trimestre                           4\n",
+       "producto         comuna              \n",
+       "Aceite de cocina Santiago           6\n",
+       "                 Sin Informacion    5\n",
+       "Agua mineral     Iquique            3\n",
+       "                 La Serena          3\n",
+       "Arroz            Santiago           9\n",
+       "                 Sin Informacion   15\n",
+       "Azúcar           Iquique            7\n",
+       "                 Puerto Montt       3\n",
+       "                 Santiago           2\n",
+       "Café             Antofagasta        4\n",
+       "                 Sin Informacion    1\n",
+       "                 Valparaíso         8\n",
+       "Carne de pollo   Sin Informacion    6\n",
+       "Fideos           Antofagasta        5\n",
+       "                 Concepción         5\n",
+       "                 Sin Informacion    2\n",
+       "Frutas frescas   Sin Informacion    2\n",
+       "Galletas         Antofagasta        7\n",
+       "Harina           Antofagasta        1\n",
+       "                 Concepción         1\n",
+       "                 Iquique            3\n",
+       "                 Santiago           2\n",
+       "                 Sin Informacion    2\n",
+       "Helado           Antofagasta        4\n",
+       "                 Temuco             4\n",
+       "                 Viña del Mar       2\n",
+       "Leche            Puerto Montt       1\n",
+       "                 Santiago           1\n",
+       "Mantequilla      Valparaíso         4\n",
+       "Pescado          Antofagasta        4\n",
+       "                 Rancagua           9\n",
+       "                 Valparaíso        20\n",
+       "Queso            Viña del Mar       5\n",
+       "Verduras         Iquique            1\n",
+       "                 Rancagua           5\n",
+       "                 Valparaíso        10\n",
+       "Yogur            Sin Informacion   15"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,8 +513,14 @@
     "#ventas_totales = ventas_por_producto.set_index('producto')['cantidad']\n",
     "#df_productoXregion.loc[('Total Ventas', 'Total')] = ventas_totales\n",
     "\n",
-    "df_productoXregion\n",
-    "\n"
+    "df_productoXregion\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*3. Tienes dos DataFrames: uno con información de clientes (ID, nombre, dirección) y otro con sus pedidos (ID del cliente, producto, cantidad). Realiza una combinación de datos para obtener un DataFrame que muestre el nombre del cliente, su dirección y los productos pedidos por cada cliente.*"
    ]
   },
   {
