Ejercicio give up

--- a/Modulo2_Actividad5.ipynb
+++ b/Modulo2_Actividad5.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "19       Nicolás Ruiz                0.0"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "Yogur            Sin Informacion   15"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,15 +503,15 @@
     "               'direccion', 'fecha_nacimiento', 'telefono', 'email'], axis=1, inplace=True)\n",
     "\n",
     "ventas_por_producto = df_todos.groupby('producto')['cantidad'].sum().reset_index()\n",
-    "#ventas_por_producto.rename(columns={'cantidad': 'Total Ventas por Producto'}, inplace=True)\n",
+    "\n",
     "\n",
     "productoXregion = df_todos.pivot_table(index=['producto', 'comuna'], columns=['anio', 'trimestre'], values='cantidad',\n",
     "                                          aggfunc='sum', fill_value=0)\n",
     "\n",
     "df_productoXregion = pd.DataFrame(productoXregion)\n",
     "\n",
-    "#ventas_totales = ventas_por_producto.set_index('producto')['cantidad']\n",
-    "#df_productoXregion.loc[('Total Ventas', 'Total')] = ventas_totales\n",
+    "ventas_totales = ventas_por_producto.set_index('producto')['cantidad']\n",
+    "df_ventas_totales = pd.DataFrame(ventas_totales)\n",
     "\n",
     "df_productoXregion\n"
    ]
