--- a/borrador_sprint2.ipynb
+++ b/borrador_sprint2.ipynb
@@ -513,24 +513,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 507,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[         Codigo Factura Nombre Cliente Productos    $       Fecha   Hora\n",
-      "0  20240330220754946914   José Ignacio   Manzana  350  2024-03-30  22:07\n",
-      "1  20240330220754946914   José Ignacio   Plátano  520  2024-03-30  22:07\n",
-      "2  20240330220754946914   José Ignacio  Condones   40  2024-03-30  22:07,          Codigo Factura  Nombre Cliente Productos     $       Fecha   Hora\n",
+      "[         Codigo Factura  Nombre Cliente Productos     $       Fecha   Hora\n",
       "0  20240330220755000306  Deyanira Garay  Cigarros  3500  2024-03-30  22:07\n",
       "1  20240330220755000306  Deyanira Garay   Chicles   250  2024-03-30  22:07,          Codigo Factura  Nombre Cliente Productos     $       Fecha   Hora\n",
       "0  20240330220817569127  Deyanira Garay  Cigarros  3500  2024-03-30  22:08\n",
       "1  20240330220817569127  Deyanira Garay   Chicles   250  2024-03-30  22:08,          Codigo Factura Nombre Cliente Productos    $       Fecha   Hora\n",
-      "0  20240330220822482993   José Ignacio   Manzana  350  2024-03-30  22:08\n",
-      "1  20240330220822482993   José Ignacio   Plátano  520  2024-03-30  22:08\n",
-      "2  20240330220822482993   José Ignacio  Condones   40  2024-03-30  22:08,          Codigo Factura Nombre Cliente Productos    $       Fecha   Hora\n",
       "0  20240330220927108785   José Ignacio   Manzana  350  2024-03-30  22:09\n",
       "1  20240330220927108785   José Ignacio   Plátano  520  2024-03-30  22:09\n",
       "2  20240330220927108785   José Ignacio  Condones   40  2024-03-30  22:09,          Codigo Factura  Nombre Cliente Productos     $       Fecha   Hora\n",
@@ -547,18 +541,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 502,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Codigo Factura</th>\n",
+       "      <th>Nombre Cliente</th>\n",
+       "      <th>Productos</th>\n",
+       "      <th>$</th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Hora</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20240330220754946914</td>\n",
+       "      <td>José Ignacio</td>\n",
+       "      <td>Manzana</td>\n",
+       "      <td>350</td>\n",
+       "      <td>2024-03-30</td>\n",
+       "      <td>22:07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20240330220754946914</td>\n",
+       "      <td>José Ignacio</td>\n",
+       "      <td>Plátano</td>\n",
+       "      <td>520</td>\n",
+       "      <td>2024-03-30</td>\n",
+       "      <td>22:07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20240330220754946914</td>\n",
+       "      <td>José Ignacio</td>\n",
+       "      <td>Condones</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2024-03-30</td>\n",
+       "      <td>22:07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Codigo Factura Nombre Cliente Productos    $       Fecha   Hora\n",
+       "0  20240330220754946914   José Ignacio   Manzana  350  2024-03-30  22:07\n",
+       "1  20240330220754946914   José Ignacio   Plátano  520  2024-03-30  22:07\n",
+       "2  20240330220754946914   José Ignacio  Condones   40  2024-03-30  22:07"
+      ]
+     },
+     "execution_count": 502,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Eliminar las filas donde 'Productos' es igual a 'Manzana'\n",
-    "for key, df in g_detalle_facturas.items():\n",
-    "    g_detalle_facturas[key] = df[df['Código Factura'] == '20240330220754946914']\n",
-    "\n",
-    "# Mostrar el diccionario actualizado\n",
-    "for key, df in g_detalle_facturas.items():\n",
-    "    print(f\"{key}:\\n{df}\\n\")\n",
+    "g_detalle_facturas[0]\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 506,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Codigo Factura</th>\n",
+       "      <th>Nombre Cliente</th>\n",
+       "      <th>Productos</th>\n",
+       "      <th>$</th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Hora</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20240330220822482993</td>\n",
+       "      <td>José Ignacio</td>\n",
+       "      <td>Manzana</td>\n",
+       "      <td>350</td>\n",
+       "      <td>2024-03-30</td>\n",
+       "      <td>22:08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20240330220822482993</td>\n",
+       "      <td>José Ignacio</td>\n",
+       "      <td>Plátano</td>\n",
+       "      <td>520</td>\n",
+       "      <td>2024-03-30</td>\n",
+       "      <td>22:08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20240330220822482993</td>\n",
+       "      <td>José Ignacio</td>\n",
+       "      <td>Condones</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2024-03-30</td>\n",
+       "      <td>22:08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Codigo Factura Nombre Cliente Productos    $       Fecha   Hora\n",
+       "0  20240330220822482993   José Ignacio   Manzana  350  2024-03-30  22:08\n",
+       "1  20240330220822482993   José Ignacio   Plátano  520  2024-03-30  22:08\n",
+       "2  20240330220822482993   José Ignacio  Condones   40  2024-03-30  22:08"
+      ]
+     },
+     "execution_count": 506,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g_detalle_facturas.pop(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 504,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Codigo Factura</th>\n",
+       "      <th>Nombre Cliente</th>\n",
+       "      <th>Productos</th>\n",
+       "      <th>$</th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Hora</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20240330220755000306</td>\n",
+       "      <td>Deyanira Garay</td>\n",
+       "      <td>Cigarros</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>2024-03-30</td>\n",
+       "      <td>22:07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20240330220755000306</td>\n",
+       "      <td>Deyanira Garay</td>\n",
+       "      <td>Chicles</td>\n",
+       "      <td>250</td>\n",
+       "      <td>2024-03-30</td>\n",
+       "      <td>22:07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Codigo Factura  Nombre Cliente Productos     $       Fecha   Hora\n",
+       "0  20240330220755000306  Deyanira Garay  Cigarros  3500  2024-03-30  22:07\n",
+       "1  20240330220755000306  Deyanira Garay   Chicles   250  2024-03-30  22:07"
+      ]
+     },
+     "execution_count": 504,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g_detalle_facturas[0]"
    ]
   }
  ],
